2017-04-13  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/common.py:

	* (integrate_column): Use `np.trapz` for integration.

	This allows more flexible usage of the function (e.g.
	multidimensional input).

	* (interpolate_halflayers):

	Function to return linear interpolated values for halflayers.

	* typhon/atmosphere.py (iwv): Support multidimensional input.

	* typhon/tests/test_atmosphere.py:

	Added a test for mutlidimensional input to `atmosphere.iwv()`.

	* doc/typhon.math.rst: Added `interpolate_halfleves`.

	* doc/typhon.utils.rst: Removed `print_timing`.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* typhon/atmosphere.py (relative_humidity): Test successful.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* typhon/atmosphere.py (relative_humidity):

	Intentional temporary breakage to test hudson failure mail.

2017-04-12  Oliver Lemke  <olemke@core-dump.info>

	* Dummy commit to test build trigger to automatically run test suite on
	typhon commits.

2017-04-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py (print_timing):

	Removed decorator `print_timing`.

	`Timer` objects can be used as function decorators instead.

2017-04-11  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py: Add least_siginficant_digit hint, fix
	calendar coding

	* typhon/datasets/dataset.py: Reading period of xarray now works!

	* typhon/datasets/tovs.py: Some bugfixes

	* typhon/physics/units/em.py: Bugfixes

	* typhon/physics/units/tools.py: Bugfixes
	
2017-04-07  Richard Larsson  <ric.larsson@gmail.com>

	* typhon/arts/catalogues.py:  Fixed an error I introduced in last
	entry.  Also added a partition_functions class to compute 
	partition sums the same way as in ARTS using the cross_section method
	of ARTSCAT5.  Can be initialized directly from SpeciesAuxData 
	(load arts-xml-data tips.xml).  Fun pass time: load some
	ARTSCAT5 lines from arts-xml-data (the Perrin-folder),